@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pympler
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pympler/ChangeLog,v 1.22 2014/01/05 17:51:44 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pympler/ChangeLog,v 1.23 2014/01/06 08:19:30 jlec Exp $
+
+  06 Jan 2014; Justin Lecher <jlec@gentoo.org> -pympler-0.2.0.ebuild:
+  Drop old
 
   05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
   Stable for sparc, wrt bug #481896
